* template.pug: Fill input.

--- a/template.pug
+++ b/template.pug
@@ -10,7 +10,7 @@ html(lang="zh")
     h1 搜索《简明英汉词典》
     form
       label(for="search") 输入单词
-      input(id="search" name="q" type="search")
+      input(id="search" name="q" type="search" value=q)
       button 搜索
     div(id="result")
       if q
